<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/profile_tv_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_list"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_rv_pet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/profile_layout_add_pet"
        android:layout_below="@id/profile_tv_top"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:id="@+id/profile_layout_add_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/profile_btn_logout"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/profile_btn_add_pet"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_add_circle_blue_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_pet"
            android:textColor="@color/dark_gray"
            android:textSize="15sp" />
    </LinearLayout>


    <Button
        android:id="@+id/profile_btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_round"
        android:elevation="2dp"
        android:text="@string/logout"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>