<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_schedule_tv_month"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="4월"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_schedule_tv_day"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="2dp"
            android:text="10"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/process_complete" />

        <View
            android:layout_width="4dp"
            android:layout_height="120dp"
            android:layout_marginStart="-1.5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/vertical_dash_line"
            android:layerType="software" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1.5"
        android:background="@drawable/schedule_background"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_schedule_tv_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_log"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/schedule_log"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <!--     방문일-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/member_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_schedule_tv_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_log"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <!--     방문일-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/visit_date"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_schedule_tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_log"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <!--방문시간-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/start_time"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_schedule_tv_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_log"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/end_time"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_schedule_tv_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_log"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
        <!--전문가-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/pet"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_schedule_tv_pet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_log"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="연락처"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_schedule_tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_log"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
        <!--리뷰-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/item_schedule_tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="위치 정보 확인"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_schedule_tv_pet_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/pet_info"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
