<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="20dp">

                <LinearLayout
                    android:id="@+id/home_btn_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/reserve_back_active"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/pet_play" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="돌봄"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home_btn_walk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/reserve_back"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/pet_walk" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="산책"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>

            <com.vipet.petvip.Design.NextBtn
                android:id="@+id/home_reserve_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/custom_red"
                android:text="@string/consumer_review" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="10dp"
                android:overScrollMode="never"
                android:id="@+id/home_rv_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:text="@string/reserve_log" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:overScrollMode="never" />

            <TextView
                android:layout_marginBottom="10dp"
                android:id="@+id/home_tv_schedule_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/more"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>